feat: Atualizar formulários de anamnese e lógica de autenticação
- Reestruturados os formulários de anamnese para incluir campos com nomes específicos para cada habilidade.
- Implementada lógica para gerenciar a visibilidade das seções de anamnese com base no papel do usuário.
- Adicionadas funções para armazenar e serializar dados de anamnese localmente.
- Implementada notificação para transições de status entre as avaliações de Terapia Ocupacional, Fonoaudiologia e Psicologia.
- Adicionadas amostras de dados para anamnese se o armazenamento estiver vazio.

--- a/index.html
+++ b/index.html
@@ -538,102 +538,103 @@
                 </div>
               </fieldset>
 
-              <table class="skills-table">
-                <thead>
-                  <tr>
-                    <th>Habilidade</th>
-                    <th>Desde</th>
-                    <th>Nota</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td data-label="Habilidade">Autonomia AVD</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Postura</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Motora Fina</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Motora Grossa</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Equilíbrio</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Organização</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Busca de estímulos</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Flapping</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Nodding de cabeça</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Gira no eixo</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Movimentos de balanço</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Ecolalia</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">
-                      Necessidade de alinhar objetos
-                    </td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Interrompe movimentos</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Fixação de Olhar</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Desregulação Sensorial</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                </tbody>
-              </table>
+              
 
               <fieldset>
                 <legend>5. QUESTIONÁRIO ESPECÍFICO – TERAPIA OCUPACIONAL</legend>
+                <table class="skills-table">
+                  <thead>
+                    <tr>
+                      <th>Habilidade</th>
+                      <th>Desde</th>
+                      <th>Nota</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td data-label="Habilidade">Autonomia AVD</td>
+                      <td data-label="Desde"><input type="text" name="to_autonomia_avd_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_autonomia_avd_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Postura</td>
+                      <td data-label="Desde"><input type="text" name="to_postura_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_postura_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Motora Fina</td>
+                      <td data-label="Desde"><input type="text" name="to_motora_fina_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_motora_fina_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Motora Grossa</td>
+                      <td data-label="Desde"><input type="text" name="to_motora_grossa_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_motora_grossa_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Equilíbrio</td>
+                      <td data-label="Desde"><input type="text" name="to_equilibrio_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_equilibrio_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Organização</td>
+                      <td data-label="Desde"><input type="text" name="to_organizacao_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_organizacao_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Busca de estímulos</td>
+                      <td data-label="Desde"><input type="text" name="to_busca_estimulos_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_busca_estimulos_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Flapping</td>
+                      <td data-label="Desde"><input type="text" name="to_flapping_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_flapping_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Nodding de cabeça</td>
+                      <td data-label="Desde"><input type="text" name="to_nodding_cabeca_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_nodding_cabeca_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Gira no eixo</td>
+                      <td data-label="Desde"><input type="text" name="to_gira_no_eixo_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_gira_no_eixo_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Movimentos de balanço</td>
+                      <td data-label="Desde"><input type="text" name="to_movimentos_balanco_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_movimentos_balanco_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Ecolalia</td>
+                      <td data-label="Desde"><input type="text" name="to_ecolalia_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_ecolalia_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">
+                        Necessidade de alinhar objetos
+                      </td>
+                      <td data-label="Desde"><input type="text" name="to_alinhar_objetos_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_alinhar_objetos_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Interrompe movimentos</td>
+                      <td data-label="Desde"><input type="text" name="to_interrompe_movimentos_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_interrompe_movimentos_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Fixação de Olhar</td>
+                      <td data-label="Desde"><input type="text" name="to_fixacao_olhar_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_fixacao_olhar_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Desregulação Sensorial</td>
+                      <td data-label="Desde"><input type="text" name="to_desregulacao_sensorial_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="to_desregulacao_sensorial_nota" /></td>
+                    </tr>
+                  </tbody>
+                </table>
                 <div class="form-group">
                   <label for="to-auditiva"
                     >Dificuldades sensoriais - Auditiva</label
@@ -695,87 +696,88 @@
                 </div>
               </fieldset>
 
-              <table class="skills-table">
-                <thead>
-                  <tr>
-                    <th>Habilidade</th>
-                    <th>Desde</th>
-                    <th>Nota</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td data-label="Habilidade">Contato Visual</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Sentar</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Esperar</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Agressividade</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Autoagressão</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Regidez cognitiva</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Resposta de chamado</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Se isola</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Ansiedade</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Gritar e Chorar</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Expressar emoções</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">
-                      Comportamento incoerente com o contexto
-                    </td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                  <tr>
-                    <td data-label="Habilidade">Brincar Funcional</td>
-                    <td data-label="Desde"><input type="text" /></td>
-                    <td data-label="Nota"><input type="text" /></td>
-                  </tr>
-                </tbody>
-              </table>
+              
 
               <fieldset>
                 <legend>6. QUESTIONÁRIO ESPECÍFICO – PSICOLOGIA</legend>
+                <table class="skills-table">
+                  <thead>
+                    <tr>
+                      <th>Habilidade</th>
+                      <th>Desde</th>
+                      <th>Nota</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td data-label="Habilidade">Contato Visual</td>
+                      <td data-label="Desde"><input type="text" name="psico_contato_visual_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_contato_visual_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Sentar</td>
+                      <td data-label="Desde"><input type="text" name="psico_sentar_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_sentar_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Esperar</td>
+                      <td data-label="Desde"><input type="text" name="psico_esperar_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_esperar_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Agressividade</td>
+                      <td data-label="Desde"><input type="text" name="psico_agressividade_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_agressividade_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Autoagressão</td>
+                      <td data-label="Desde"><input type="text" name="psico_autoagressao_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_autoagressao_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Regidez cognitiva</td>
+                      <td data-label="Desde"><input type="text" name="psico_regidez_cognitiva_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_regidez_cognitiva_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Resposta de chamado</td>
+                      <td data-label="Desde"><input type="text" name="psico_resposta_chamado_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_resposta_chamado_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Se isola</td>
+                      <td data-label="Desde"><input type="text" name="psico_se_isola_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_se_isola_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Ansiedade</td>
+                      <td data-label="Desde"><input type="text" name="psico_ansiedade_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_ansiedade_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Gritar e Chorar</td>
+                      <td data-label="Desde"><input type="text" name="psico_gritar_chorar_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_gritar_chorar_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Expressar emoções</td>
+                      <td data-label="Desde"><input type="text" name="psico_expressar_emocoes_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_expressar_emocoes_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">
+                        Comportamento incoerente com o contexto
+                      </td>
+                      <td data-label="Desde"><input type="text" name="psico_comportamento_incoerente_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_comportamento_incoerente_nota" /></td>
+                    </tr>
+                    <tr>
+                      <td data-label="Habilidade">Brincar Funcional</td>
+                      <td data-label="Desde"><input type="text" name="psico_brincar_funcional_desde" /></td>
+                      <td data-label="Nota"><input type="text" name="psico_brincar_funcional_nota" /></td>
+                    </tr>
+                  </tbody>
+                </table>
                 <div class="form-group">
                   <label for="psico-comportamentos"
                     >Comportamentos-problema</label
