Commit config API

--- a/index.html
+++ b/index.html
@@ -1073,6 +1073,7 @@
                 <button type="submit">Buscar</button>
               </div>
             </form>
+            <ul id="search-results-list" class="search-results" aria-live="polite"></ul>
           </div>
 
           <div
