Commit termino de API banco de dados

--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
                 <button type="submit">Buscar</button>
               </div>
             </form>
-            <ul id="search-results-list" class="search-results" aria-live="polite"></ul>
+            <div id="search-results-list" class="search-results" aria-live="polite"></div>
           </div>
 
           <div
@@ -1092,7 +1092,11 @@
               />
               <div class="profile-header-info">
                 <h2>Ana Silva</h2>
-                <p>ID: #4821 | Idade: 7 anos</p>
+                <p>ID: #4821</p>
+                <p>Sexo: F</p>
+                <p>Data de Nascimento: 15/03/2018</p>
+                <p>Pai: João Silva</p>
+                <p>Mãe: Maria Silva</p>
               </div>
             </header>
             <div class="profile-grid">
