Commit alteração de formulario para novos usuarios

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
         <h1 id="login-title">Intranet</h1>
         <p>Welcome back! Please log in to your account.</p>
         <div class="input-group">
-          <label for="email">User</label>
+          <label for="nome">Nome</label>
           <input
             type="text"
-            id="email"
-            name="email"
-            placeholder="e.g., DEV"
+            id="nome"
+            name="nome"
+            placeholder="Digite seu nome"
             required
             aria-required="true"
             autocomplete="username"
           />
         </div>
         <div class="input-group">
-          <label for="password">Password</label>
+          <label for="senha">Senha</label>
           <input
             type="password"
-            id="password"
-            name="password"
-            placeholder="••••••••"
+            id="senha"
+            name="senha"
+            placeholder="Digite sua senha"
             required
             aria-required="true"
             autocomplete="current-password"
